** Change: The Hellfire timer during Cannon Phase will now stop after the 4th Cannon is destroyed.
** Change: "Phase: Final" now refers to Phase 4. Maelforge from 30% after last Cannon is destroyed.

Rise of the Phoenix
* High Priest Arakhurn
** Change: Updated the Trigger methods for both Boss versions to be the new TID. This should prevent incorrect encounter starts during RP.

----
v1.2.9

Ready Check
* Fixed: Added a catch for a rare error during a ready check when switching Raid types.

----
v1.2.8

LibSRM
* Change: Updated to LibSRM 1.2.5 (Includes various improvements to Combat and Death states)

Ready Check
* New: Buffering System added when new units join en masse. This will allow for all player leave messages to be processed as a priority.
* Change: The system can now handle 40 players. The last 20 of which are not linked with a UI element and are only there for buffering.
* Fixed: Prevented Units being added as a UI element while the list is at maximum population. They will instead be added as non-UI buffer elements.

Ready Check Available Tracking
* Weapon Stones
** Wind Glyph (Cleric, Mage - Tank - Medium)

Infernal Dawn
* Warboss Drak
** Fixed: Prevented the encounter sometimes skipping either of the first two bosses.

Primeval Feast
* Lord Twyl
** Change: Consolidated the Critter Mechanic Spy in to one tracker.

Translations
* French updates.
* German updates.

----
v1.2.7 - Hotfix

Infernal Dawn
* Laethys
** Fixed: Castbar should read CastBar...
* Maelforge - Ember Eggs
** Change: Added a time-out of 20 seconds to allow for the victory message while out of combat.

----
v1.2.6

Rez Master
* Change: Prevented clients sending Ability Remove messages while the player is in combat.
* Fixed: Typo with one of the class tracking variables.
* Fixed: The Rez list was not updating correctly if you log in while in a Party/Raid.
* Fixed: Spark of Life now shows once again. (Adjusted ID for Rift 1.10)